All alignment fixed

--- a/frontend/src/Components/DashBoard/CreateEvent/AddFeatures/AddFeatures.css
+++ b/frontend/src/Components/DashBoard/CreateEvent/AddFeatures/AddFeatures.css
@@ -42,9 +42,9 @@
     font-size: 1.5vw;
 }
 /* ALL */
-.div_red{
+/* .div_red{
     border: red 1px solid;
-}
+} */
 /* NAST  AF*/
 .add_features_margin_zero{
     margin: 0vw;
